# MyProfile

./: .gitignore  pyproject.toml  utils.py
app/: config.py  main.py  profile.py  userprofile.py
app/auth/: __init__.py  exceptions.py  password.py  routing.py  token.py
templates/: login.html  myprofile.html
